--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-Theme Name: Twenty Twenty-Three
-Theme URI: https://wordpress.org/themes/twentytwentythree
-Author: the WordPress team
-Author URI: https://wordpress.org
-Description: Twenty Twenty-Three is designed to take advantage of the new design tools introduced in WordPress 6.1. With a clean, blank base as a starting point, this default theme includes ten diverse style variations created by members of the WordPress community. Whether you want to build a complex or incredibly simple website, you can do it quickly and intuitively through the bundled styles or dive into creation and full customization yourself.
+Theme Name: UDP Test Theme
+Theme URI: 
+Author: UDP Bois
+Author URI: 
+Description: UDP Theme is a briliant way to utilize the block format of Word Press 6.1 Delevoped for the ease of use of designing you website. Whether you are looking to create a quick simple site or a very powerful layered site, UDP theme has the ease of use and the bulk to do the heavy lifting. UDP Theme is built of a very powerful frame to be the perfect backbone for your site. Integrating plugins, custom posts, pages, and more is now a breeze. 
 Requires at least: 6.1
 Tested up to: 6.4
 Requires PHP: 5.6
-Version: 1.3
-License: GNU General Public License v2 or later
-License URI: https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
-Text Domain: twentytwentythree
+Version: 0.1 Alpha
+License: 
+License URI: 
+Text Domain: UDP Test Theme
 Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, news
 */
